# tauri-v2-tsrs-example-2024

./: README.md  package.json  pnpm-lock.yaml  tsconfig.json
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/ipc-if/: Cargo.toml
src-tauri/ipc-if/bindings/: greet.ts  random-example.ts
src-tauri/ipc-if/src/: greet.rs  lib.rs  random_example.rs
src-tauri/src/: lib.rs
