[package]
name = "ipc-if"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = { version = "0.4.38", features = ["serde"] }
serde = { version = "1.0.211", features = ["derive"] }
ts-rs = { version = "10.0.0", features = ["chrono-impl", "uuid-impl"] }
uuid = { version = "1.11.0", features = ["v4", "serde"] }
